@@ -47,6 +47,24 @@
    action => 'view',
 &>
 %       }
+%    } elsif ( $model->layout() eq 'left-right' ) {
+<div class='left-right-container'>
+%       my $i = 0;
+%       my $class = '';
+%       foreach my $component (@{$componentsRef}) {
+%           my $width = $model->width($component->name());
+%           if ($i == 0) { $class = 'half-left'; $i++; }
+%           else { $class = 'half-right'; $i++; }
+<div class='<% $class %>' style='width:<% $width %>;'>
+<& $component->Viewer(),
+   model => $component,
+   hasChanged => $hasChanged,
+   action => 'view',
+&>
+</div>
+%       }
+</div>
+<div style='clear:both;'></div>
 %    } elsif ( $model->layout() eq 'select' )  {
 <& /ajax/selector.mas,
    composite => $model,
